<resources>
    <string name="app_name">Golos.io</string>
    <string name="add_tags">Add tags</string>
    <string name="use_only_one_dash">A tag can have only one hyphen</string>
    <string name="use_whitespaces_seporator">Use the spacebar to separate tags</string>
    <string name="only_lowercase_characters">Please use only lowercase symbols</string>
    <string name="use_only_allowed_characters">Please use only lowercase letters, numbers and one dash</string>
    <string name="first_char_must_be_a_letter">Please start with a letter</string>
    <string name="publish">Publish</string>
    <string name="text">text</string>
    <string name="comment">comment</string>
    <string name="GOLOS">Golos</string>
    <string name="login">Login</string>
    <string name="posting_key">Private posting key</string>
    <string name="scan">Scan</string>
    <string name="active_key">Private active key</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="enter_post_title">Add an interesting title</string>
    <string name="tab_back_double_to_enter">Tap again to exit</string>
    <string name="slow_internet_connection">Connection is too slow. Please try again</string>
    <string name="no_internet_connection">There is no internet connection</string>
    <string name="unknown_error">An unknown error occurred, please try again later</string>
    <string name="stripes_new">New</string>
    <string name="actual">Hot</string>
    <string name="popular">Popular</string>
    <string name="feed">Feed</string>
    <string name="promo">Promo</string>
    <string name="for_">for</string>
    <string name="comments">Comments</string>
    <string name="comments_with_count">Comments&#160;&#160;&#160;%s</string>
    <string name="image">Image</string>
    <string name="ago">back</string>
    <string name="no_comments">No comments yet. Be the first.</string>
    <string name="answer">Reply</string>
    <string name="enter_key">Enter the key</string>
    <string name="more_about_golos"><![CDATA[<a href = "https://golos.io/welcome">About Golos.io</>]]></string>
    <string name="do_not_registered_register"> Don’t have an account? <![CDATA[<a href = "https://reg.golos.io/"> Sign up here</>]]></string>
    <string name="enter_login">You must enter your Username</string>
    <string name="enter_password">Password</string>
    <string name="posting_or_active_key">Enter active or posting key</string>
    <string name="wrong_args">Incorrect call</string>
    <string name="wrong_credentials">Incorrect login or password</string>
    <string name="logout">Log out</string>
    <string name="loading">Loading…</string>
    <string name="choose_vote_power">Choose your vote power</string>
    <string name="user_used_max_comments_chances">You have used the maximum number of attempts to vote for this entry</string>
    <string name="vote_canceled">Vote was canceled</string>
    <string name="upvoted">Upvoted</string>
    <string name="you_voted_same_way">You have already voted for this entry</string>
    <string name="login_to_vote">Log in or register to vote</string>
    <string name="login_to_see_feed">Login to view your feed</string>
    <string name="nothing_here">While there is nothing, it will be filled immediately after the appearance of new content</string>
    <string name="wrong_image">Something is wrong with the image,please try another one.</string>
    <string name="link_name">Name of link</string>
    <string name="link_address">Link address</string>
    <string name="you_can_post_only_every_five_minutes">You can send a post or comment no more often than once in 5 minutes</string>
    <string name="wrong_time">Check the date and time on your phone, they should be correct</string>
    <string name="at_least_one_tag">To create a post, you need min 1 tag</string>
    <string name="post_body_must_be_not_empty">Please add any text. The post can not be empty.</string>
    <string name="comment_body_must_be_not_empty">Comment can not be empty. Please add any text</string>
    <string name="enter_title">Please add the title</string>
    <string name="send_post_success">Post successfully published</string>
    <string name="send_comment_success">Comment successfully published</string>
    <string name="title_activity_main_test">MainTestActivity</string>
    <string name="login_write_comment">Sign in to write comments</string>
    <string name="stories">Stories</string>
    <string name="tag_search">Post with tags:</string>
    <string name="groups">Communities</string>
    <string name="profile">Profile</string>
    <string name="unaval_in_current_version">Not available in current version</string>
    <string name="less_then_hour_ago">Less than an hour ago</string>
    <string name="enter">Login</string>
    <string name="subscribers">Subscribers</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="blog">Blog</string>
    <string name="answers">Answers</string>
    <string name="pouch">Wallet</string>
    <string name="golos_power">Golos power</string>
    <string name="Золотой">gbg</string>
    <string name="gbg">GBG</string>
    <string name="safe">Safe</string>
    <string name="account_worth">Account Worth</string>
    <string name="safe_golos">Safe - Golos</string>
    <string name="safe_gbg">Safe - GBG</string>
    <string name="enter_text">Enter message text</string>
    <string name="to_comment">Comment</string>
    <string name="wiki">Golos Wiki</string>
    <string name="about_golos">About Golos.io</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="golos_android_v">Golos for Android v.%s</string>
    <string name="user_made_logout">User made logout</string>
    <string name="can_vote_once_per_three_second">You can vote only once per three seconds</string>
    <string name="must_be_logged_in_for_this_action">You must be logged in to perform this action</string>
    <string name="must_be_subscribed_for_action">You must be subscribed to user to unsubscribe</string>
    <string name="you_already_subscribed">You have already subscribed</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="enter_with_active_key">Active key</string>
    <string name="enter_with_posting_key">Posting key</string>
    <string name="enter_with_master_key">Master key</string>
    <string name="enter_private_active_wif">You must enter you private active wif</string>
    <string name="enter_private_posting_wif">You must enter your private posting key</string>
    <string name="enter_private_master">You must enter your private master key</string>
    <string name="you_cannot_subscribe_on_yourself">You cannot subscribe on yourself</string>
    <string name="retry">Retry</string>
    <string name="now_happened">Just now</string>
    <string name="scan_fail">failed to recognize QR - code, please try again</string>
    <string name="enter_private_key">Please, enter your private, not public, key</string>
    <string name="tags_you_subscribed">tags, you subscribed on</string>
    <string name="popular_now">popular now</string>
    <string name="no_tags_chose">no tags chosen</string>
    <string name="subscribed">subscribed</string>
    <string name="tags">tags</string>
    <string name="users">users</string>
    <string name="tags_search">Tag search</string>
    <string name="users_search">User search</string>
    <string name="golos_search">Search in Golos.io</string>
    <string name="recommended">Recommended</string>
    <string name="similar">Similar:</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscribes">Subscribes</string>
    <string name="published_ib">Published in</string>
    <string name="cancel_sub_onTag">Cancel subscription on #%s?</string>
    <string name="cancel_tag_sub">Cancel subscription</string>
    <string name="dismiss">Dismiss</string>
    <string name="voted">Votes</string>
    <string name="enter_pouch_">2. Proceed to \'Settings\' section</string>
    <string name="help_step_1">1. Log in to <![CDATA[<a href = "https://golos.io">http://golos.io</>]]></string>
    <string name="help_step_3_posting">3. In \'Keys\' section press show private posting key (it starts from 5 or 1)</string>
    <string name="help_step_3_active">3. In \'Keys\' section press show private active key (it starts from 5 or 1)</string>
    <string name="help_step_4">4. You can copy-paste it, or scan through QR-code.</string>
    <string name="thanks_understood">Got it</string>
    <string name="close">Thanks, i understood</string>
    <string name="refresh_question">Refresh</string>
    <string name="reenter_acc">Authorization error. Try exit and enter to your account one more time.</string>
    <string name="settings">Settings</string>
    <string name="stripe_settings">Feed preferences</string>
    <string name="mode">Mode</string>
    <string name="compact_mode">Compact mode</string>
    <string name="images_mode">Show images</string>
    <string name="vote_app_plead">Vote for the app on Google Play.</string>
    <string name="not_now">not now</string>
    <string name="vote_exclamation">Vote</string>
    <string name="you_must_have_more_repo_for_action">You must have more reputation for this action</string>
    <string name="never">Never</string>
    <string name="search_in_golos">Search in Golos.io</string>
    <string name="show_nsfw_images_mode">NSFW content</string>
    <string name="to_flag">Vote against</string>
    <string name="cant_vote_after_payout">Can not vote, reward period is closed already.</string>
    <string name="edit">Edit</string>
    <string name="you_may_comment_only_tw_sec">You may only comment once every 20 seconds</string>
    <string name="maximum_comment_depth">Maximum comment depth reached</string>
    <string-array name="currency">
        <item>Ruble</item>
        <item>Dollar</item>
        <item>GBG</item>
    </string-array>
    <string name="rubles_format">₽%s</string>
    <string name="dollars_format">$%s</string>
    <string name="gbg_format">GBG%s</string>
    <string name="voting_power">Voting power</string>
    <string name="general_settings">General settings</string>
    <string name="currency_precision">Bounty display</string>
    <string name="tv_wallet_balance">Wallet balance</string>
    <string name="city">City</string>
    <string name="site">Site</string>
    <string name="registrationDate">Registration date</string>
    <string name="yeat_with_dor">%s y.</string>
    <string name="information">Information</string>
    <string name="users_voted_on_post">Your <![CDATA[<a href = "%s">post</>]]> was upvoted %s %s</string>
    <string name="users_voted_on_comment">Your <![CDATA[<a href = "%s">comment</>]]> was upvoted %s %s</string>
    <string name="users_voted_on_post_for_notification">Your post was voted %s %s</string>
    <string name="users_voted_on_comment_for_notification">Your comment was voted %s %s</string>
    <string name="users_downvoted_on_post">Your <![CDATA[<a href = "%s">post</>]]> was downvoted by %s %s</string>
    <string name="users_downvoted_on_comment">Your <![CDATA[<a href = "%s">comment</>]]> was downvoted by %s %s</string>
    <string name="change">Change</string>
    <string name="cancel_cancel_dialog">Cancel</string>
    <string name="vote_cancel">Vote change</string>
    <string name="vote_change_text">Removing of a vote will change your decision and curation rewards for the post.</string>
    <string name="repost">Share this post</string>
    <string name="reblog_answer_text">Do you confirm, that you want to share this post?</string>
    <string name="make_reblog">Share</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="subscribe_confirmation">Are your sure want to unsubscribe from <b>@%s</b>?</string>
    <string name="cancel_sub">Cancel subscription</string>
</resources>