<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/stories"
        android:icon="@drawable/ic_home_24dp"
        android:title="@string/stories" />
    <item
        android:id="@+id/groups"
        android:icon="@drawable/ic_seacrh_gray_24dp"
        android:title="@string/groups" />
    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_rect_with_plus_gray_24dp"
        android:title="@string/groups" />
    <item
        android:id="@+id/notifications"
        android:icon="@drawable/ic_bell_gray_24dp"
        android:title="@string/groups" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile_outline_gray_24dp"
        android:title="@string/profile" />
</menu>