<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/material_huge"
    android:background="@android:color/white"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                style="@style/SettingTextViewStyle"
                android:id="@+id/golos_wiki_tv"
                android:background="?selectableItemBackground"
                android:text="@string/wiki" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/SettingTextViewStyle"
                android:id="@+id/about_golos_tv"
                android:background="?selectableItemBackground"
                android:text="@string/about_golos" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/SettingTextViewStyle"
                android:id="@+id/privacy_policy_tv"
                android:background="?selectableItemBackground"
                android:text="@string/privacy_policy" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/SettingTextViewStyle"
                android:id="@+id/exit"
                android:background="?selectableItemBackground"
                android:text="@string/exit" />


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center_horizontal"
            android:text="@string/golos_android_v"
            android:textColor="#A6A6A6"
            android:id="@+id/version_tv"
            android:textSize="@dimen/font_small" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>