<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_material"
        android:text="@string/repost"
        android:textColor="@color/text_color_white_black"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/material_big"
        android:layout_marginTop="@dimen/margin_material"
        android:layout_marginEnd="@dimen/material_big"

        android:gravity="center"
        android:text="@string/reblog_answer_text"
        android:textColor="@color/font_gray_black"
        android:textSize="@dimen/font_medium"/>

    <Button
        android:id="@+id/reblog_btn"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_material_half"
        android:text="@string/make_reblog"
        android:textAllCaps="false"
        android:textColor="@color/font_gray_black"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/cancel_btn"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_material_small"
        android:text="@string/cancel_cancel_dialog"
        android:textAllCaps="false"
        android:textColor="@color/font_gray_black"
        android:textSize="14sp"/>
</LinearLayout>