<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/material_huge"
        android:layout_marginStart="@dimen/material_huge"

        android:orientation="vertical">


        <TextView
            android:id="@+id/golos_tv"
            style="@style/PouchTVStyle"
            android:text="@string/GOLOS"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/voting_power_tv"
            style="@style/PouchTVStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/golos_power"
            app:layout_constraintTop_toBottomOf="@id/golos_tv" />

        <TextView
            android:id="@+id/gbg_tv"
            style="@style/PouchTVStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gbg"
            app:layout_constraintTop_toBottomOf="@+id/voting_power_tv" />

        <TextView
            android:id="@+id/safe_golos_tv"
            style="@style/PouchTVStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/safe_golos"
            app:layout_constraintTop_toBottomOf="@+id/gbg_tv" />

        <TextView
            android:id="@+id/safe_gbg_tv"
            style="@style/PouchTVStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/safe_gbg"
            app:layout_constraintTop_toBottomOf="@+id/safe_golos_tv" />

        <TextView
            android:id="@+id/account_worth_tv"
            style="@style/PouchTVStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_worth"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/safe_gbg_tv" />


        <TextView
            android:id="@+id/golos_num_tv"
            style="@style/ProfileTvNumStyle"
            app:layout_constraintBottom_toBottomOf="@+id/golos_tv"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/golos_tv" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/voting_power_num_tv"
            style="@style/ProfileTvNumStyle"
            app:layout_constraintBottom_toBottomOf="@+id/voting_power_tv"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/voting_power_tv" />

        <TextView
            android:id="@+id/gbg_num_tv"
            style="@style/ProfileTvNumStyle"
            app:layout_constraintBottom_toBottomOf="@+id/gbg_tv"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/gbg_tv" />

        <TextView
            android:id="@+id/safe_golos_num_tv"
            style="@style/ProfileTvNumStyle"
            app:layout_constraintBottom_toBottomOf="@+id/safe_golos_tv"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/safe_golos_tv" />

        <TextView
            android:id="@+id/safe_gbg_num_tv"
            style="@style/ProfileTvNumStyle"
            app:layout_constraintBottom_toBottomOf="@+id/safe_gbg_tv"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/safe_gbg_tv" />

        <TextView
            android:id="@+id/account_worth_num_tv"
            style="@style/ProfileTvNumStyle"
            app:layout_constraintBottom_toBottomOf="@+id/account_worth_tv"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@+id/account_worth_tv" />
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>