<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white_black_toolbar_color"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/material_huge"
        android:text="@string/like_app_question"
        android:textColor="@color/textColorP"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/vote"
        style="@style/Base.Widget.AppCompat.Button.Borderless.VoteDialogButton"
        android:text="@string/vote_exclamation"
        app:layout_constraintEnd_toEndOf="@id/lable"
        app:layout_constraintStart_toEndOf="@id/not_now"
        app:layout_constraintTop_toBottomOf="@id/lable" />

    <Button
        android:id="@+id/never"
        style="@style/Base.Widget.AppCompat.Button.Borderless.VoteDialogButton"
        android:text="@string/never"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@+id/vote"
        app:layout_constraintStart_toStartOf="@id/lable"
        app:layout_constraintTop_toBottomOf="@id/lable" />

    <Button
        android:id="@+id/not_now"
        style="@style/Base.Widget.AppCompat.Button.Borderless.VoteDialogButton"
        android:gravity="end|center_vertical"
        android:text="@string/not_now"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@+id/vote"
        app:layout_constraintStart_toStartOf="@id/lable"
        app:layout_constraintTop_toBottomOf="@id/lable" />


</LinearLayout>