<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="48dp"
        android:gravity="center_vertical|start"
        android:orientation="vertical"
        android:paddingStart="@dimen/material_huge"
        android:paddingEnd="@dimen/material_huge">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                app:srcCompat="@drawable/ic_www_36dp"/>

            <TextView
                android:id="@+id/go_to_site_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_material"
                android:text="@string/help_step_1"
                android:textColor="@color/textColorP"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:srcCompat="@drawable/ic_gear_36dp_gray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_material"
                android:text="@string/enter_pouch_"
                android:textColor="@color/textColorP"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:srcCompat="@drawable/ic_key_gray_36dp"/>

            <TextView
                android:id="@+id/key_type_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_material"
                android:layout_marginTop="2dp"
                android:text="@string/help_step_3_posting"
                android:textColor="@color/textColorP"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:srcCompat="@drawable/ic_barcode_32dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_material"
                android:layout_marginTop="-2dp"
                android:gravity="start|top"
                android:includeFontPadding="false"
                android:text="@string/help_step_4"
                android:textColor="@color/textColorP"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/finish_btn"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="32dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/close"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:backgroundTint="@color/colorAccent"/>
    </LinearLayout>
</ScrollView>